resources/onyx-screen.css
/* ... */
.onyx-search-button {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	color: transparent !important;
	background: transparent !important;
	border: none !important;
	margin: 0 !important;
}

#onyx-banner-userOptions {
	display: flex;
	float: right;
	padding: 0 15px;
}

#onyx-notifications-list,
#onyx-messages-list {
	min-width: 350px;
}

#onyx-userButton-avatar {
	margin-right: 15px;
}

#onyx-userButton-avatar > img {
	width: 30px;
	height: 30px;
}

#onyx-userButton-label {
	display: inline-block;
	height: 25px;
	font-size: 20px;
	color: #bbbbbb;
	margin: 5px 0;
	padding: 5px 0;
	cursor: default;
	white-space: nowrap;
	transition: 0.4s;
	/* Disable selection of username text */
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

#onyx-userOptions-personalTools:hover #onyx-userButton-label {
	color: #ffffff;
	transition: 0.4s;
}

/* PAGE */
#onyx-page {
	margin: 85px auto 30px auto;
	background-color: #ddd;
}

/* HEADER */
#onyx-header-wikiHeader {
	height: 165px;
	position: relative;
	background-color: #ccc;
	display: grid;
	grid-template-columns: max-content auto;
}

#onyx-wikiHeader-headerLogo {
	padding: 15px;
	height: 135px;
	display: flex;
	align-items: center;
	grid-row: 1;
	grid-column: 1;
}

#onyx-headerLogo-image {
	width: auto;
	height: auto;
	max-width: 400px;
	max-height: 135px;
}

#onyx-wikiHeader-tagline {
	grid-row: 1;
	grid-column: 2;
	margin: 0 15px 0 0;
}

#onyx-wikiHeader-navigation {
	grid-row: 1;
	grid-column: 2;
	overflow: hidden;
	bottom: 0;
	right: 0;
	position: absolute;
	margin: 15px 15px 15px 0;
}

#onyx-navigation-list {
	list-style: none;
	margin: 0;
	display: flex;
	flex-wrap: wrap-reverse;
	direction: rtl;
	justify-content: space-between;
}

#onyx-navigation-list > li {
	display: inline;
	margin: 5px 10px;
	color: #333;
}

#onyx-navigation-list > li > a {
	color: #333;
	font-weight: bold;
}

#onyx-header-articleHeader {
	width: 100%;
	min-height: 80px;
}

#onyx-articleHeader-actions {
	float: right;
	padding-right: 15px;
}

#onyx-articleHeader-actions > * {
	margin-left: 15px;
}

#onyx-articleHeader-actions > a:hover {
	text-decoration: none;
}

#onyx-actions-actionsList {
	display: inline-block;
	margin: 15px 0 15px 2px;
	padding: 0;
}

#onyx-actionsList-button {
	min-width: 28px;
	cursor: auto;
	margin: 0;
}

#onyx-actionsList-dropdownIcon {
	margin: 7px;
	fill: #fff;
	height: 14px;
}

#onyx-actionsList-list {
	margin: 0;
}

#onyx-articleHeader-title {
	min-height: 44px;
	margin: 0 15px 15px 15px;
	vertical-align: bottom;
}

/* PAGE BODY */

#onyx-page-pageBody {
	padding: 0 15px 0 15px;
}

#onyx-pageContent-subtitle {
	margin: 0 0 15px 15px;
	font-style: italic;
}

#onyx-pageContent-undelete {
	margin: 0 0 15px 15px;
	font-style: italic;
}

.onyx-section-begin {
	margin-top: -60px !important;
	padding-top: 60px !important;
}

/* SIDEBAR */

#onyx-pageBody-sidebar {
	padding-bottom: 15px;
}

#onyx-pageBody-sidebar h1 {
	font-size: 26px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h2 {
	font-size: 24px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h3 {
	font-size: 22px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h4 {
	font-size: 20px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h5 {
	font-size: 18px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h6 {
	font-size: 16px;
	margin-top: 0;
	padding-top: 0;
}

.onyx-sidebarModule:not(:last-child) {
	padding-bottom: 15px;
}

.onyx-sidebarModule-custom {
	padding-left: 15px;
}

.onyx-sidebarModule-custom > h1,
.onyx-sidebarModule-custom > h2,
.onyx-sidebarModule-custom > h3,
.onyx-sidebarModule-custom > h4,
.onyx-sidebarModule-custom > h5,
.onyx-sidebarModule-custom > h6 {
	margin-left: -15px;
}

#onyx-recentChanges-heading {
	text-transform: capitalize;
}

#onyx-pageContents-heading {
	text-transform: capitalize;
}

#onyx-recentChanges-content {
	padding-left: 15px;
}

#onyx-recentChanges-content > ul {
	list-style: none;
	margin-left: 0;
}

#onyx-recentChanges-content > ul > li {
	margin: 0 0 5px 0;
}

.onyx-recentChanges-info {
	font-size: 10pt;
	color: #333;
}

.onyx-recentChanges-info a {
	color: #333;
}

#onyx-sidebar-stickyModules {
	position: sticky;
	max-height: calc(100vh - (55px + 25px + 30px));
	top: 70px;
	overflow-x: hidden;
	overflow-y: auto;
	margin-top: 15px;
}

#onyx-pageContents-content {
	margin-left: 15px;
}

#onyx-pageContents-backToTop {
	margin-bottom: 5px;
}

.onyx-pageContents-list {
	list-style: none;
}

#onyx-pageContents-content > .onyx-pageContents-list {
	margin-left: 0;
}


.onyx-pageContents-listItem > ul {
	display: none;
	margin-left: 20px;
}

.onyx-pageContents-expandButton {
	cursor: pointer;
}

.onyx-pageContents-expandButton,
.onyx-pageContents-noExpandIcon {
	display: inline-flex;
	min-width: 20px;
	min-height: 20px;
	justify-content: center;
	align-items: center;
	user-select: none;
}

.onyx-pageContents-expandButton svg,
.onyx-pageContents-noExpandIcon svg {
	fill: #444;
}

.onyx-pageContents-expandButton > svg {
	transform: rotate(-90deg);
	transition: 0.4s;
}

.onyx-pageContents-softExpanded > .onyx-pageContents-expandButton > svg,
.onyx-pageContents-hardExpanded > .onyx-pageContents-expandButton > svg {
	transform: rotate(0deg);
	transition: 0.4s;
}

.onyx-pageContents-forceCollapsed > .onyx-pageContents-expandButton > svg {
	transform: rotate(-90deg);
	transition: 0.4s;
}

.onyx-pageContents-softExpanded > ul,
.onyx-pageContents-hardExpanded > ul {
	display: block;
}

.onyx-pageContents-forceCollapsed > ul {
	display: none;
}

.onyx-pageContents-listItem.onyx-pageContents-selected > span {
	font-weight: bold;
	pointer-events: none;
}

.onyx-pageContents-listItem.onyx-pageContents-selected > a {
	font-weight: bold;
	pointer-events: none;
}

.onyx-pageContents-listItem > a:hover {
	text-decoration: none;
}

.onyx-pageContents-itemPrefix {
	margin: 0 10px 0 0;
	color: #444;
}
/* ... */

